--- a/pages/templates/index.html
+++ b/pages/templates/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Home
 ---
 
-<h1>Welcome to my website!</h1>
+<h1>Welcome to my blog website!</h1>
 
 <p>This is my home on the web.</p>
 
