--- a/pages/templates/index.html
+++ b/pages/templates/index.html
@@ -5,7 +5,7 @@ title: Home
 
 <h1>Welcome to my blog website!</h1>
 
-<p>This is my home on the web.</p>
+<p>This is my second home on the web.</p>
 
 <h2>Blog</h2>
 
