--- a/assets/styles.css
+++ b/assets/styles.css
@@ -35,9 +35,10 @@ a {
     padding: 0;
 }
 .photo-grid img {
-    width: 100%;
-    height: auto;
+    width: 50%;
+    height: 600px;
     border-radius: 1em;
+
 }
 footer {
     margin-top: 2em;
