--- a/pages/templates/index.html
+++ b/pages/templates/index.html
@@ -21,7 +21,7 @@ title: Home
 
 <ul class="photo-grid">
     <li>
-        <img src="https://jamesg.blog/assets/golden_gate_bridge.jpeg" alt="" />
+        <img src="https://jamesg.blog/assets/golden_gate_bridge.jpeg" alt="" style="width:50%; height:500px;"/>
     </li>
 
 </ul>
