--- a/pages/templates/index.html
+++ b/pages/templates/index.html
@@ -13,7 +13,7 @@ title: Home
     by the rel=alternate tag in _layouts/default.html. -->
 <ul class="blog-posts h-feed">
     {% for post in site.posts %}
-    <li class="h-entry">{{ post.date | long_date }} <a href="{{ BASE_URL }}{{ post.url }}" class="u-url p-name">{{ post.title }}</a></li>
+    <li class="h-entry">{{ post.date | long_date }} <a href="{{ post.url }}" class="u-url p-name">{{ post.title }}</a></li>
     {% endfor %}
 </ul>
 
